# USTC_CG_24

./: .gitignore  .gitmodules  README.md
Framework2D/: .clang-format  .clang-uml  .gitignore  CMakeLists.txt  README.md
Framework2D/include/view/: cmpt_canvas.h  cmpt_image.h  comp_canvas.h  comp_image.h  component.h  image.h  window.h
Framework2D/include/view/shapes/: ellipse.h  freehand.h  line.h  polygon.h  rect.h  shape.h
Framework2D/src/: CMakeLists.txt
Framework2D/src/assignments/: CMakeLists.txt
Framework2D/src/assignments/1_MiniDraw/: CMakeLists.txt  main.cpp  window_minidraw.cpp  window_minidraw.h
Framework2D/src/assignments/2_ImageWarping/: CMakeLists.txt  comp_warping.cpp  comp_warping.h  main.cpp  warping_IDW.cpp  warping_NN.cpp  warping_RBF.cpp  warping_fisheye.cpp  window_warping.cpp  window_warping.h
Framework2D/src/assignments/3_PoissonImageEditing/: CMakeLists.txt  comp_source_image.cpp  comp_source_image.h  comp_target_image.cpp  comp_target_image.h  main.cpp  window_poisson.cpp  window_poisson.h
Framework2D/src/demo/: CMakeLists.txt  demo.cpp  demo_hello_world.cpp  window_demo.cpp  window_demo.h
Framework2D/src/view/: CMakeLists.txt  cmpt_canvas.cpp  cmpt_image.cpp  comp_canvas.cpp  comp_image.cpp  component.cpp  window.cpp
Framework2D/src/view/shapes/: eliipse.cpp  freehand.cpp  line.cpp  polygon.cpp  rect.cpp  shape.cpp
Framework3D/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  configure.py
Framework3D/cmake/: FindDXC.cmake  FindNVAPI.cmake  FindSlang.cmake
Framework3D/cmake/macros/: Private.cmake  copyHeaderForBuild.cmake  pxrPlugin.cmake
Framework3D/include/: USTC_CG.h
Framework3D/include/GCore/: Components.h  GOP.h  GlobalUsdStage.h  geom_node_global_params.h
Framework3D/include/GCore/Components/: CurveComponent.h  MaterialComponent.h  MeshOperand.h  PointsComponent.h  SkelComponent.h  VolumeComponent.h  XformComponent.h
Framework3D/include/GUI/: node_system.h  ui_event.h  usd_filetree.h  usdview_engine.h
Framework3D/include/GUI/window/: window.h
Framework3D/include/Nodes/: GlobalUsdStage.h  all_socket_types.hpp  geo_socket_types.hpp  id.hpp  make_standard_type.hpp  node.hpp  node_declare.hpp  node_exec.hpp  node_exec_eager.hpp  node_register.h  node_socket.hpp  node_tree.hpp  pin.hpp  render_socket_types.hpp  socket_types.hpp  stage_socket_types.hpp
Framework3D/include/Nodes/socket_types/: basic_socket_types.hpp  buffer_socket_types.hpp  geo_socket_types.hpp  render_socket_types.hpp  stage_socket_types.hpp
Framework3D/include/RCore/: Backend.hpp  GLResources.hpp  ROP.h  ResourceAllocator.hpp
Framework3D/include/RCore/internal/: GLResources.hpp  resources.hpp
Framework3D/include/SCore/: SOP.h  SequencedComponent.h  SpringSystemOperator.h
Framework3D/include/Utils/CUDA/: CUDAException.h
Framework3D/include/Utils/Functions/: CPPType.hpp  GenericPointer.hpp  memory_utils.hh  mixins.hpp  utildefines.h
Framework3D/include/Utils/Launcher/: RunUsdview.h
Framework3D/include/Utils/Logging/: Logging.h
Framework3D/include/Utils/Macro/: map.h
Framework3D/include/Utils/Math/: math.h  string_hash.h
Framework3D/source/GCore/: CMakeLists.txt  CurveComponent.cpp  GOP.cpp  MaterialComponent.cpp  MeshOperand.cpp  PointsComponent.cpp  SkelComponent.cpp  VolumeComponent.cpp  XformComponent.cpp
Framework3D/source/GCore/usdFoam/: CMakeLists.txt  api.h  generatedSchema.usda  plateauBorder.cpp  plateauBorder.h  plugInfo.json  polygonFilm.cpp  polygonFilm.h  root.cpp  root.h  schema.usda  sphereFilm.cpp  sphereFilm.h  tokens.cpp  tokens.h  wrapPlateauBorder.cpp  wrapPolygonFilm.cpp  wrapRoot.cpp  wrapSphereFilm.cpp  wrapTokens.cpp
Framework3D/source/GUI/: CMakeLists.txt  GUI.cpp  free_camera.cpp  free_camera.h  global_usd_stage.cpp  node_system_exec.cpp  node_system_exec.h  node_system_ui.cpp  node_system_ui.h  usd_filetree.cpp  usdview_engine.cpp
Framework3D/source/GUI/window/: window.cpp
Framework3D/source/RCore/: CMakeLists.txt  GLResources.cpp  ROP.cpp
Framework3D/source/RCore/HD_USTC_CG_HWRT/: CMakeLists.txt  api.h  camera.cpp  camera.h  config.cpp  config.h  context.h  instancer.cpp  instancer.h  integrator.cpp  integrator.h  light.cpp  light.h  material.cpp  material.h  plugInfo.json  renderBuffer.cpp  renderBuffer.h  renderDelegate.cpp  renderDelegate.h  renderParam.h  renderPass.cpp  renderPass.h  renderer.cpp  renderer.h  rendererPlugin.cpp  rendererPlugin.h  sampler.cpp  sampler.h  shaderCompiler.cpp  shaderCompiler.h  surfaceInteraction.h  texture.cpp  texture.h
Framework3D/source/RCore/hd_USTC_CG/: CMakeLists.txt  camera.cpp  camera.h  color.h  config.cpp  config.h  context.h  instancer.cpp  integrator.cpp  integrator.h  light.cpp  light.h  material.cpp  material.h  plugInfo.json  renderBuffer.cpp  renderBuffer.h  renderDelegate.cpp  renderDelegate.h  renderParam.h  renderPass.cpp  renderPass.h  renderer.cpp  renderer.h  rendererEmbree.cpp  rendererEmbree.h  rendererGL.cpp  rendererGL.h  sampler.cpp  sampler.h  surfaceInteraction.cpp  surfaceInteraction.h  texture.cpp  texture.h
Framework3D/source/RCore/hd_USTC_CG_GL/: CMakeLists.txt  api.h  camera.cpp  camera.h  config.cpp  light.h  (+29 more)
Framework3D/source/SCore/: CMakeLists.txt  SOP.cpp  SequencedComponent.cpp
Framework3D/source/nodes/: CMakeLists.txt  NODES_FILES_DIR.h.in
Framework3D/tests/: CMakeLists.txt
Framework3D/tests/GCore/: CMakeLists.txt  colored_print.cpp  mesh_io.cpp  mesh_operand.cpp  mesh_operator.cpp  monkey.inl  volume_io.cpp
Framework3D/tests/GUI/: CMakeLists.txt  GUI.cpp  bufferProtocol.cpp  editor.cpp  engine.cpp  entt.cpp  imgui_treeview.cpp  node_system.cpp  script.py  usdview_imgui.cpp
Framework3D/tests/Node/: CMakeLists.txt  node_tree_io.cpp  node_tree_socket.cpp  read_model.py  torch.cpp
Framework3D/tests/RCore/: BRDF_Validator.cpp  CMakeLists.txt  hd_USTC_CG.cpp  usdview.cpp
Framework3D/tests/SCore/: CMakeLists.txt  SpringSystem.cpp  openvdb_io.cpp  sequence_io.cpp
Framework3D/tests/nodes/: CMakeLists.txt  node_register.cpp
Homeworks/0_cpp_warmup/samples/: CMakeLists.txt  README.md
(+368 files in other folders)
